CHANGE: fix main-form width and inputs on mobile

--- a/src/components/forms/main-form.module.css
+++ b/src/components/forms/main-form.module.css
@@ -47,6 +47,14 @@
   text-align: center;
 }
 
+.inputFieldRow {
+  flex-direction: column;
+}
+
+.inputFieldColumn {
+  margin-bottom: 16px !important;
+}
+
 @media all and (min-width: 992px) {
   .mainForm.heroForm {
     padding: 40px 36px;
@@ -107,12 +115,22 @@
 
 @media all and (min-width: 768px) {
   .mainFormBox {
-    max-width: 900px;
+    max-width: 820px;
     margin: 0 auto;
   }
 
   .buttons {
     margin-top: 30px;
+  }
+
+  .inputFieldRow {
+    flex-direction: row;
+  }
+
+  .inputFieldColumn {
+    flex-basis: 50%;
+    width: 50%;
+    padding: 0 10px;
   }
 }
 
